--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
     - master
 
 before_script: |-
-  wget -O consul.zip -q https://dl.bintray.com/mitchellh/consul/0.5.2_linux_amd64.zip
+  curl -L -o consul.zip https://releases.hashicorp.com/consul/0.6.0-rc2/consul_0.6.0-rc2_linux_amd64.zip
   unzip consul.zip
   mv consul ~/bin/
 
