--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ branches:
 before_script: |-
   curl -L -o consul.zip https://releases.hashicorp.com/consul/0.6.0-rc2/consul_0.6.0-rc2_linux_amd64.zip
   unzip consul.zip
+  mkdir -p ~/bin/
   mv consul ~/bin/
 
 script: make updatedeps test testrace
